a-b/service-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    app: nginx
    version: "v1.0.0"
  ports:
    - name: nginx
      protocol: TCP
      port: 80
  type: ClusterIP
