a-b/ingress-a.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: n8ire.zapto.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-nginx-service
            port:
              number: 80
