a-b/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - host: n8ire.zapto.org
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: my-nginx-service-canary
            port:
              number: 80
